<resources>
    <string name="app_name">TravelCosts</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price_gas">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="kms_per_l">KMs por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_costs">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calc">CALCULAR</string>
    <string name="cost">R$ 0</string>

    <string name="success">Calculo Feito com Sucesso!</string>
    <string name="validate_distance">O campo distância é obrigatório</string>
    <string name="validate_price">O campo preço por litro é obrigatório</string>
    <string name="validate_autonomy">O campo kms por litro é obrigatório e não pode ser 0</string>
    <string name="footer_sign">Develop with ❤️ by Thalles Lana️</string>
    <string name="description_logo">Logo Travel Costs</string>


</resources>